# fraud-detection-api

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-deploy.txt  requirements.txt
artifacts/: metadata.json  metrics.json
scripts/: download_data.py
src/fraud/: __init__.py  api.py  config.py  consumer.py  data.py  evaluate.py  features.py  producer.py  scoring.py  train.py
src/fraud/models/: __init__.py  autoencoder.py  base.py  isolation_forest.py
tests/: test_scoring.py
web/: index.html
